--- a/browser/js/authorized/dashboard/dashboard.html
+++ b/browser/js/authorized/dashboard/dashboard.html
@@ -2,7 +2,7 @@
     <div class="hbox hbox-auto-xs hbox-auto-sm">
 <!-- main -->
     <div ng-repeat ="dashboard in dashboards">
-        <ng-include src="dashboard.url"></ng-include>
+        <ng-include src="dashboard.url" class="hbox hbox-auto-xs hbox-auto-sm"></ng-include>
     </div>
 <!-- / main -->
     </div>
