--- a/browser/js/authorized/students/checkout/checkout.html
+++ b/browser/js/authorized/students/checkout/checkout.html
@@ -49,10 +49,9 @@
                         </div>
                         <div class="col-md-8">
                             <div class="row">
-                                <div class="col-md-6 paypalblock">
-                                    <a href="" class="paypal-pay">Pay With <img src="img/paywith-paypal.png" alt="PayPal" /></a>
+                                <div class="col-md-6 paypalblock p-l-0">
+                                    <a href="" class="paypal-pay">or Pay With <img src="img/paywith-paypal.png" alt="PayPal" /></a>
                                 </div>
-                                <div class="or">OR</div>
                                 <div class="col-md-6">
                                     <div class="creditcard-pay"> Credit Card</div>
                                 </div>
@@ -60,7 +59,7 @@
                                     <div class="cc-payform">
                                         <form class="form-horizontal ng-pristine ng-valid" ng-submit="updateUser(user)">
                                             <div class="form-group">
-                                                <label class="col-sm-2 control-label">Card Type</label>
+                                                <label class="col-sm-3 control-label">Card Type</label>
                                                 <div class="col-sm-8">
                                                     <select name='type' id='expireYY' class="form-control ng-pristine ng-valid ng-empty ng-touched" required>
                                                         <option value='visa'>Visa</option>
@@ -71,20 +70,20 @@
                                                 </div>
                                             </div>
                                             <div class="form-group">
-                                                <label class="col-sm-2 control-label">Name on Card</label>
+                                                <label class="col-sm-3 control-label">Name on Card</label>
                                                 <div class="col-sm-8">
                                                     <input type="text" class="form-control ng-pristine ng-untouched ng-valid ng-empty" ng-model="ccInfo.first_name" required placeholder="Name on Card">
                                                 </div>
                                             </div>
                                             <div class="form-group">
-                                                <label class="col-sm-2 control-label">Card Number</label>
+                                                <label class="col-sm-3 control-label">Card Number</label>
                                                 <div class="col-sm-8">
                                                     <input type="text" class="form-control ng-pristine ng-valid ng-empty ng-touched" ng-model="ccInfo.number" required placeholder="Card Number">
                                                 </div>
                                             </div>
                                             <div class="form-group">
-                                                <label class="col-sm-2 control-label">Expiry Date</label>
-                                                <div class="col-sm-5">
+                                                <label class="col-sm-3 control-label">Expiry Date</label>
+                                                <div class="col-sm-3">
                                                     <select name='expireMM' id='expireMM' ng-model="ccInfo.expire_month" required class="form-control ng-pristine ng-valid ng-empty ng-touched">
                                                         <option value=''>Month</option>
                                                         <option value='01'>January</option>
@@ -112,17 +111,14 @@
                                                         <option value='2022'>2022</option>
                                                     </select>
                                                 </div>
-                                            </div>
-                                            <div class="form-group">
-                                                <label class="col-sm-2 control-label">CVV</label>
-                                                <div class="col-sm-8">
+                                                <div class="col-sm-2">
                                                     <input type="text" class="form-control ng-pristine ng-untouched ng-valid ng-empty" name="" only-numbers maxlength="3" required placeholder="CVV">
                                                 </div>
                                             </div>
                                             <br>
                                             <div class="form-group">
-                                                <label class="col-sm-2 control-label">&nbsp;</label>
-                                                <div class="col-sm-10">
+                                                <label class="col-sm-3 control-label">&nbsp;</label>
+                                                <div class="col-sm-8">
                                                     <button type="submit" class="fill-btn">Pay Now</button>
                                                 </div>
                                             </div>
