--- a/browser/js/common/modals/lesson/lesson.html
+++ b/browser/js/common/modals/lesson/lesson.html
@@ -1,52 +1,60 @@
 <div class="modal-header">
 	<h3 class="modal-title">Add a Lesson</h3>
 </div>
-<form class="form horizontal" ng-submit="createLesson(lesson)" id="lessonForm">
+<form class="form-horizontal" ng-submit="createLesson(lesson)" id="lessonForm">
 <div class="modal-body">
 		<div class="form-group">
 			<div class="row">
-		    	<label class="col-sm-2 control-label">Lesson Title</label>
-            	<div class="col-sm-6">
+		    	<label class="col-sm-3 control-label">Lesson Title</label>
+            	<div class="col-sm-8">
                 	<input type="text" class="form-control" placeholder="Lesson Title" ng-model="lesson.title">
             	</div>
             </div>
 		</div>
 		<div class="form-group">
 			<div class="row">
-	            <label class="col-sm-2 control-label">Start Date</label>
-	            <div class="col-sm-6">
+	            <label class="col-sm-3 control-label">Start Date</label>
+	            <div class="col-sm-8">
 	            	<input type="date" class="form-control" ng-model="lesson.startDate" required/>
 	            </div>
 	        </div>
 		</div>
 		<div class="form-group">
 			<div class="row">
-	            <lable class="col-sm-2 control-label">End Date</lable>
-	            <div class="col-sm-6">
+	            <lable class="col-sm-3 control-label">End Date</lable>
+	            <div class="col-sm-8">
 	            	<input type="date" class="form-control" ng-model="lesson.endDate" required/>
 	            </div>
 	        </div>
 		</div>
 		<div class="section-container">
-			<h4>Lesson Sections</h4>
 			<div class="section" ng-repeat="section in sections track by $index">
-				<h3>{{$index + 1}}.</h3>
-				<div class="row">
+
+				<h3 class="section-title">Section {{$index + 1}} <button href="#" class="remove-link"><i class="fa fa-trash-o"></i></a></h3>
+				<div class="row form-group">
+					<lable class="col-sm-3 control-label">Section Title</lable>
 					<div class="col-sm-8">
 						<input type="text" class="form-control" placeholder="Section Title" ng-model="sections[$index].title"/>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row form-group">
+					<lable class="col-sm-3 control-label">Section Details</lable>
 					<div class="col-sm-8">
-						<textarea ng-model="sections[$index].description"></textarea>
+						<textarea class="form-control" rows="4" ng-model="sections[$index].description"></textarea>
 					</div>
 				</div>
 			</div>
 		</div>
-		<button class="btn" type="button" ng-click="addSection()">Add Section</button>
+		<div class="row form-group">
+					<lable class="col-sm-3 control-label">&nbsp;</lable>
+					<div class="col-sm-8">
+						<button class="outlined-btn red-btn cancel-lesson add-lesson slim-btn" type="button" ng-click="addSection()">Add Lesson Sections</button>
+					</div>
+				</div>
+		<div class="clearfix"></div>
 </div>
 <div class="modal-footer">
-	<button type="submit" class="btn btn-pimary" >Save</button>
-	<button type="button" class="btn btn-danger" ng-click="cancel()">Cancel</button>
+	<button type="button" class="outlined-btn gray-btn" ng-click="cancel()">Cancel</button>
+    <button type="submit" class="fill-btn yello-btn">Save</button>
 </div>
 </form>
