--- a/browser/js/authorized/forums/forums.html
+++ b/browser/js/authorized/forums/forums.html
@@ -7,7 +7,7 @@
             <div class=" lter wrapper-md bredcrumb">
                 <div class="row">
                     <div class="col-sm-6 col-xs-12">
-                        <a ui-sref="app.dashboard"><small class="text-muted">Dashboard</small></a> <i class="fa fa-angle-right"></i> <small class="text-muted">Forums</small> <i class="fa fa-angle-right"></i> <small class="text-muted">Home</small>
+                        <a ui-sref="app.dashboard"><small class="text-muted">Dashboard</small></a> <i class="fa fa-angle-right"></i> <small class="text-muted">Forums</small>
                     </div>
                 </div>
             </div>
@@ -17,7 +17,7 @@
                     <div class="col-md-9">
                         <div class="row">
                             <!--General Forums Start-->
-                            <div class="col-md-12 mar-btm-30 recent-activity">
+                            <div class="col-md-12 mar-btm-30 recent-activity" ng-show="teacher">
                                 <div class="outlined clearfix pad-20 for-head">
                                     <div class="title-box float-lt">
                                         <span class="main-title">Classes You Teach</span>
@@ -31,7 +31,6 @@
                                             <img src="img/forum-thum.jpg" title="User" alt="User" />
                                             </span>
                                             <span class="activity-title">{{forum.name}}<br>
-                                            <span class="desc-det"><span class="desc-lbl no-pad">By:</span> <a href="" class="link"> John Doe</a> | 1hr ago</span>
                                             </span>
                                             <a ng-click="transition(forum.id)" class="outlined-btn gray-btn float-rt p-l-r-20 forumcount"><i class="fa fa-comments"></i> 15</a>
                                         </li>
@@ -41,55 +40,35 @@
                             </div>
                             <!--General Forums End-->
                             <!--Classes Forums Start-->
-                            <div class="col-md-12 mar-btm-30 recent-activity">
+                            <div class="col-md-12 mar-btm-30 recent-activity" ng-show="!teacher">
                                 <div class="outlined clearfix pad-20 for-head">
                                     <div class="title-box float-lt">
-                                        <span class="main-title">Classes</span>
-                                        <span class="reltd-title">Lorem ipsum dolor sit amet, consectetur</span>
+                                        <span class="main-title">Classes You Attend</span>
+                                        <span class="reltd-title">Forums for classes you are a part of</span>
                                     </div>
-                                    <a href="" class="outlined-btn red-btn float-rt fr-newtop">+ New Topic </a>
                                 </div>
                                 <div class="outlined clearfix graph no-top-border">
                                     <ul class="class-list">
-                                        <li>
+                                        <li ng-repeat="forum in studentForums track by forum.id">
                                             <span class="pro-img-list">
-                  <img src="img/forum-thum.jpg" title="User" alt="User" />
-                </span>
-                                            <span class="activity-title">Can someone help with Fractions?<br>
-                                        <span class="desc-det"><span class="desc-lbl no-pad">By:</span> <a href="" class="link">John Doe</a> | 1hr ago</span>
+                                            <img src="img/forum-thum.jpg" title="User" alt="User" />
                                             </span>
-                                            <a ui-sref="app.forums-thread" class="outlined-btn gray-btn float-rt p-l-r-20 forumcount"><i class="fa fa-comments"></i> 15</a>
-                                        </li>
-                                        <li>
-                                            <span class="pro-img-list">
-                  <img src="img/forum-thum.jpg" title="User" alt="User" />
-                </span>
-                                            <span class="activity-title">Can someone help with Fractions?<br>
-                                        <span class="desc-det"><span class="desc-lbl no-pad">By:</span> <a href="" class="link">John Doe</a> | 1hr ago</span>
+                                            <span class="activity-title">{{forum.name}}<br>
+                                            <span class="desc-det"><span class="desc-lbl no-pad">By:</span> <a href="" class="link"> John Doe</a> | 1hr ago</span>
                                             </span>
-                                            <a ui-sref="app.forums-thread" class="outlined-btn gray-btn float-rt p-l-r-20 forumcount"><i class="fa fa-comments"></i> 15</a>
-                                        </li>
-                                        <li>
-                                            <span class="pro-img-list">
-                  <img src="img/forum-thum.jpg" title="User" alt="User" />
-                </span>
-                                            <span class="activity-title">Can someone help with Fractions?<br>
-                                        <span class="desc-det"><span class="desc-lbl no-pad">By:</span> <a href="" class="link">John Doe</a> | 1hr ago</span>
-                                            </span>
-                                            <a ui-sref="app.forums-thread" class="outlined-btn gray-btn float-rt p-l-r-20 forumcount"><i class="fa fa-comments"></i> 15</a>
+                                            <a ng-click="transition(forum.id)" class="outlined-btn gray-btn float-rt p-l-r-20 forumcount"><i class="fa fa-comments"></i> 15</a>
                                         </li>
                                     </ul>
                                 </div>
                             </div>
                             <!--Classes Forums End-->
                             <!--Support Forums Start-->
-                            <div class="col-md-12 mar-btm-30 recent-activity">
+                            <!-- <div class="col-md-12 mar-btm-30 recent-activity">
                                 <div class="outlined clearfix pad-20 for-head">
                                     <div class="title-box float-lt">
                                         <span class="main-title">Support</span>
-                                        <span class="reltd-title">Lorem ipsum dolor sit amet, consectetur</span>
+                                        <span class="reltd-title">General Questions about the Edvances Platform</span>
                                     </div>
-                                    <a href="" class="outlined-btn red-btn float-rt fr-newtop">+ New Topic </a>
                                 </div>
                                 <div class="outlined clearfix graph no-top-border">
                                     <ul class="class-list">
@@ -102,22 +81,13 @@
                                             </span>
                                             <a ui-sref="app.forums-thread" class="outlined-btn gray-btn float-rt p-l-r-20 forumcount"><i class="fa fa-comments"></i> 15</a>
                                         </li>
-                                        <li>
-                                            <span class="pro-img-list">
-                  <img src="img/forum-thum.jpg" title="User" alt="User" />
-                </span>
-                                            <span class="activity-title">Can someone help with Fractions?<br>
-                                        <span class="desc-det"><span class="desc-lbl no-pad">By:</span> <a href="" class="link">John Doe</a> | 1hr ago</span>
-                                            </span>
-                                            <a ui-sref="app.forums-thread" class="outlined-btn gray-btn float-rt p-l-r-20 forumcount"><i class="fa fa-comments"></i> 15</a>
-                                        </li>
                                     </ul>
                                 </div>
-                            </div>
+                            </div> -->
                             <!--Support Forums End-->
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <!-- <div class="col-md-3">
                         <div class="forum-search">
                             <form>
                                 <input type="text" name="" placeholder="Search Forums" class="search-for">
@@ -133,7 +103,7 @@
                             <li><a ui-sref="app.forums-category">Support (04)</a></li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
