--- a/browser/js/authorized/teachers/aside.html
+++ b/browser/js/authorized/teachers/aside.html
@@ -94,7 +94,14 @@
     </a>
   </li> -->
 
- <!--  <li>
+    <li ui-sref-active="active-sref">
+      <a ui-sref="forums">
+       <span class="nav-img"><img src="img/nav-forum.png"></span>
+        <span class="font-bold" translate="Messages">Forums</span>
+      </a>
+  </li>
+
+<!--   <li>
     <a ui-sref-active="active-sref" class="auto" toggle-parent-class="active">      
     <span class="nav-img"><img src="img/nav-forum.png"/></span>
       <span class="pull-right text-muted">
