--- a/browser/js/authorized/teachers/quizDashboard/quizDashboard.html
+++ b/browser/js/authorized/teachers/quizDashboard/quizDashboard.html
@@ -63,7 +63,7 @@
                         </div>
                     </div>
                     <div class="outlined pad-10 clearfix no-top-border">
-                        <a href="" class="outlined-btn gray-btn float-rt"><i class="fa fa-pencil"></i></a>
+                        <a ng-click="editQuiz(quiz.id)" class="outlined-btn gray-btn float-rt"><i class="fa fa-pencil"></i></a>
                         <a ng-click="deleteQuiz(quiz.id)" class="fill-btn float-lt slim-btn">Delete</a>
                     </div>
                 </div>
